[gd_scene load_steps=17 format=2]

[ext_resource path="res://BlinkColorShader.tres" type="Shader" id=1]
[ext_resource path="res://Enemies/WanderControler.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://misc/Stats/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hurtboxes and Hitboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hurtboxes and Hitboxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Base/BaseEnemy.gd" type="Script" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 63.1269

[sub_resource type="CircleShape2D" id=6]
radius = 5.0

[sub_resource type="CircleShape2D" id=11]
radius = 5.09902

[sub_resource type="Animation" id=9]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
playing = true
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.458824 )
shape = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 6 )

[node name="WanderControler" parent="." instance=ExtResource( 3 )]

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="BlinkEffect" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Start = SubResource( 9 )
anims/Stop = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
